# cloudrone

./: CMakeLists.txt  README.md  package.xml
cascades/: cascade0.xml  cascadeStarNew.xml  cascadeTreeLBP.xml  cascadeTreeNew.xml
client/js/: cloudrone.js  onready.js
css/: style.css.BACKUP.17694.css  style.css.LOCAL.17694.css  style.css.REMOTE.20306.css  style.css~
html/: index.html
include/control_node/: control.h
include/marker_detection_node/: marker_detection_node.h  particleFilter.h
include/worker_node/: FSM.h  drone.h  dronelauncher.h  dronethread.h  stateset.h  worker.h
js/: cloudrone.js  cloudrone.js~  markers.js  onready.js  onready.js~  page.js  page.js~  worker_comm.js  worker_comm.js~
launch/: cloudrone.launch  cloudrone.launch~
msg/: Drone.msg  Object.msg~  State.msg
server/cascades/: cascade(old).xml  cascadeStar.xml
server/include/worker_node/: worker.h
server/msg/: Drone.msg  Object.msg  User.msg
server/src/marker_detection_node/: findObjects ros image.txt
server/srv/: GetMarkers.srv
sql/: cloudrone.db  cloudrone.sql  outines
src/control_node/: control.cpp  control_node.cpp
src/marker_detection_node/: PF.cpp  cascadedetect.cpp  marker_detection_node.cpp
src/worker_node/: FSM.cpp  drone.cpp  dronelauncher.cpp  dronethread.cpp  stateset.cpp  worker.cpp  worker_node.cpp
srv/: Auth.srv  GetDrones.srv  GetDrones.srv~  GetFlightTask.srv  GetNewNodes.srv~  KillNodes.srv  SetFlightTask.srv  SetFlightTask.srv~  SetState.srv
